--- a/ЛР№1 веб/index.html
+++ b/ЛР№1 веб/index.html
@@ -7,74 +7,67 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <!--Якийсь текст-->
     <header>
-        <h1 class="fl">
-            Follow your Heart
-        </h1>
-        <h2 class="item">
-            навігація:
-        </h2>
+        <h1 class="fl">Follow your Heart</h1>
+        <h2 class="item">навігація:</h2>
         <nav class="bb">
             <ul class="aa">
-                <li>
-                    <a href="./about.html">Про нас</a>
-                </li> 
-                <li>
-                    <a href="./catalog.html">Каталог</a>
-                </li>
-                <li>
-                    <a href="./kontaktu.html">Контакти</a>
-                </li>
-                <li>
-                    <a href="./poslugu.html">Послуги</a>
-                </li>
-                <li>
-                    <a href="./akcii.html">Акції</a>
-                </li>
+                <li><a href="./about.html">Про нас</a></li>
+                <li><a href="./catalog.html">Каталог</a></li>
+                <li><a href="./kontaktu.html">Контакти</a></li>
+                <li><a href="./poslugu.html">Послуги</a></li>
+                <li><a href="./akcii.html">Акції</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <img width="300px" src="https://buketland.com.ua/image/cache/catalog/flowers/mart2021/img_1987-800x800.jpg" alt="Квіти">
-        <iframe width="440" height="285" src="https://www.youtube.com/embed/CTfEqS8LEuE?si=ksoOdgB7aK4YxmEo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <h2>
-            Список квітів:
-        </h2>
-        <ul>
-            <li>
-                Троянди
-            </li>
-            <li>
-                Тюльпани
-            </li>
-            <li class="fly">
-                Хризантеми
-            </li>
-            <li>
-                Підсніжники
-            </li>
-        </ul>
-        <table border="1">
-            <tr>
-                <th>Назва квітів</th>
-                <th>Асортимент</th>
-                <th>Ціна</th>
-            </tr>
-            <tr>
-               <td>Орхідея</td> 
-               <td>15</td>
-               <td>156 грн</td>
-            </tr>
-            <tr>
-                <td>Барвінок</td>
-                <td>25</td>
-                <td>98 грн</td>
-            </tr>
-        </table>
-    </main>
-    <footer>
     
+    <div class="container">
+        <div class="left-column">
+            <h2>Список квітів:</h2>
+            <ul>
+                <li>Троянди</li>
+                <li>Тюльпани</li>
+                <li>Хризантеми</li>
+                <li>Підсніжники</li>
+            </ul>
+        </div>
+
+        <main>
+            <div class="photo1">
+                <img width="300px" src="https://buketland.com.ua/image/cache/catalog/flowers/mart2021/img_1987-800x800.jpg" alt="Квіти">
+                <iframe width="440" height="285" src="https://www.youtube.com/embed/CTfEqS8LEuE?si=ksoOdgB7aK4YxmEo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </main>
+
+        <div class="right-column">
+            <table border="1">
+                <tr>
+                    <th>Назва квітів</th>
+                    <th>Асортимент</th>
+                    <th>Ціна</th>
+                </tr>
+                <tr>
+                   <td>Орхідея</td> 
+                   <td>15</td>
+                   <td>156 грн</td>
+                </tr>
+                <tr>
+                    <td>Барвінок</td>
+                    <td>25</td>
+                    <td>98 грн</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+    
+    <footer>
+        <p>© 2024 Follow your Heart. Всі права захищені.</p>
+        <p>Слідкуйте за нами в соціальних мережах:</p>
+        <ul>
+            <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
+            <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
+            <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
+        </ul>
     </footer>
 </body>
 </html>
