--- a/ЛР№1 веб/index.html
+++ b/ЛР№1 веб/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Follow your Heart</title>
+    <!-- Підключення CSS файлу -->
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
@@ -40,7 +41,7 @@
         </main>
 
         <div class="right-column">
-            <table border="1">
+            <table>
                 <tr>
                     <th>Назва квітів</th>
                     <th>Асортимент</th>
@@ -71,3 +72,4 @@
     </footer>
 </body>
 </html>
+
