--- a/ЛР№1 веб/index.html
+++ b/ЛР№1 веб/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Follow your Heart</title>
-    <!-- Підключення CSS файлу -->
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
@@ -70,6 +69,14 @@
             <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
         </ul>
     </footer>
+
+    <!-- Додавання JavaScript перед закриттям body -->
+    <script>
+        function changeBackgroundColor() {
+            document.body.style.backgroundColor = "lightpink"; 
+        }
+        document.querySelector("h1").onclick = changeBackgroundColor;
+    </script>
 </body>
 </html>
 
